kubernetes/namespaces/nginx-gateway/routes/service-routes/ff-bot-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ff-bot-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - ff-bot.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: ff-bot
        namespace: tooling
        port: 4000
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
