kubernetes/namespaces/nginx-gateway/routes/service-routes/forms-backend-pythondiscord-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forms-backend-pythondiscord-com
  namespace: nginx-gateway
spec:
  hostnames:
    - forms-api.pythondiscord.com
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: forms-backend
        namespace: forms
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
