kubernetes/namespaces/nginx-gateway/routes/service-routes/grafana-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - grafana.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: grafana
        namespace: monitoring
        port: 3000
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
