kubernetes/namespaces/nginx-gateway/routes/service-routes/keycloak-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - id.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - matches:
      - path:
          type: Exact
          value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /realms/pydis/account
          statusCode: 302
    - backendRefs:
      - name: keycloak
        namespace: tooling
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: keycloak-proxy-buffer
