kubernetes/namespaces/nginx-gateway/routes/service-routes/loki-gateway-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-gateway-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - loki-gateway.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: loki-gateway
        namespace: loki
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: AuthenticationFilter
          name: loki-basic-auth
