kubernetes/namespaces/nginx-gateway/routes/service-routes/metabase-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - metabase.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: metabase
        namespace: tooling
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
