kubernetes/namespaces/nginx-gateway/routes/service-routes/modmail-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: modmail-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - modmail.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: modmail-web
        namespace: modmail
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
