kubernetes/namespaces/nginx-gateway/routes/service-routes/pinnwand-pythondiscord-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinnwand-pythondiscord-com
  namespace: nginx-gateway
spec:
  hostnames:
    - paste.pythondiscord.com
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: pinnwand
        namespace: web
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: block-head
