kubernetes/namespaces/nginx-gateway/routes/service-routes/pixels-modsite-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pixels-modsite-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - pixels-mod.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: pixels-modsite
        namespace: pixels
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
