kubernetes/namespaces/nginx-gateway/routes/service-routes/prometheus-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - prometheus.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: prometheus
        namespace: monitoring
        port: 9090
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
