kubernetes/namespaces/nginx-gateway/routes/service-routes/quackstack-pythondiscord-com.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quackstack-pythondiscord-com
  namespace: nginx-gateway
spec:
  hostnames:
    - quackstack.pythondiscord.com
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: quackstack
        namespace: apis
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
