kubernetes/namespaces/nginx-gateway/routes/service-routes/thallium-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thallium-backend
  namespace: nginx-gateway
spec:
  hostnames:
    - merch-api.owlcorp.uk
    - merch-api.pydis.wtf
    - merch-api.pythondiscord.com
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: thallium-backend-svc
        namespace: merch
        port: 80
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
