kubernetes/namespaces/nginx-gateway/routes/service-routes/vault-pydis-wtf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-pydis-wtf
  namespace: nginx-gateway
spec:
  hostnames:
    - vault.pydis.wtf
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  rules:
    - backendRefs:
      - name: vault
        namespace: vault
        port: 8200
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.nginx.org
          kind: SnippetsFilter
          name: enforce-mtls
